<resources>
    <string name="app_name">Pat_1</string>
    <string name="edit_message">Welcome Mr Wheather</string>
    <string name="sensors">Show Sensors</string>
    <string name="threshold">Alarm Threshold</string>
    <string name="disable">Disable Alarms</string>
    <string name="max_min">Maximus and Minimums</string>
    <string name="config">Preserve Configuration</string>
    <string name="rep">Create Repository</string>
    <string name="show">Show Repository</string>
    <string name="add_min">min</string>
    <string name="add_max">max</string>
    <string name="title_threshold">Specify the Thresholds of the Alarms</string>
    <string name="ambient_temperature">Ambient Temperature (ºC)</string>
    <string name="humidity">Humidity (%)</string>
    <string name="luminosity">Luminosity (Lux)</string>
    <string name="active_label">Active</string>
    <string-array name="Repositories">
        <item>Temperature</item>
        <item>Luminosity</item>
        <item>Humidity</item>
    </string-array>
    <string name="no_repo_value">--------</string>
    <string name="save">Save Settings</string>
    <string name="Settings">Settings</string>
    <string name="Reset">Reset Repository</string>
    <string name="repo_min">Recorded Minimum:</string>
    <string name="repo_max">Recorded Maximum:</string>
    <string name="temp">Temperature</string>
    <string name="light">Light</string>
    <string name="hum">Humidity</string>
</resources>