<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#22C39D"
    tools:context=".SensorActivity">

    <Button
        android:id="@+id/button8"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_baseline_arrow_back_24"
        android:onClick="goback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txtLIGHT"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/editbox_background"
        android:gravity="center"
        android:text="@string/light"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtTEMP3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtTEMP3" />

    <TextView
        android:id="@+id/txtHUM"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/editbox_background"
        android:gravity="center"
        android:text="@string/hum"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtTEMP5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtTEMP5" />

    <TextView
        android:id="@+id/txtTEMP"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/editbox_background"
        android:gravity="center"
        android:text="@string/temp"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtTEMP2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtTEMP2" />

    <TextView
        android:id="@+id/txtTEMP2"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/temp"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/txtTEMP3"
        app:layout_constraintEnd_toStartOf="@+id/txtTEMP"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <TextView
        android:id="@+id/txtTEMP3"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/light"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/txtTEMP5"
        app:layout_constraintEnd_toStartOf="@+id/txtLIGHT"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTEMP2" />

    <TextView
        android:id="@+id/txtTEMP5"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/hum"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtHUM"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTEMP3" />

</androidx.constraintlayout.widget.ConstraintLayout>